Language visibility / class correction

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 
 }
 
-#languageEn{
+#languageHun{
     display: none;
 }
 
